k8s/development/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: development
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: alby.nutty.dev
    http:
      paths:
      - backend:
          serviceName: dotfiles
          servicePort: 1000
  - host: ciar.nutty.dev
    http:
      paths:
      - backend:
          serviceName: dotfiles
          servicePort: 2000
  - host: math.nutty.dev
    http:
      paths:
      - backend:
          serviceName: dotfiles
          servicePort: 3000
  - host: rabbie.nutty.dev
    http:
      paths:
      - backend:
          serviceName: dotfiles
          servicePort: 4000
  - host: barri.nutty.dev
    http:
      paths:
      - backend:
          serviceName: dotfiles
          servicePort: 5000
  - host: coill.nutty.dev
    http:
      paths:
      - backend:
          serviceName: dotfiles
          servicePort: 6000
  - host: fiodh.nutty.dev
    http:
      paths:
      - backend:
          serviceName: dotfiles
          servicePort: 7000
  - host: rundal.nutty.dev
    http:
      paths:
      - backend:
          serviceName: dotfiles
          servicePort: 8000
  - host: peaca.nutty.dev
    http:
      paths:
      - backend:
          serviceName: dotfiles
          servicePort: 9000
